logger 분리 및 질문 형태 변경

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root, newstrum
+keys=root, newstrum, notofication, GPT
 
 [handlers]
 keys=stream_handler, file_handler
@@ -15,6 +15,18 @@ handlers=
 level=DEBUG
 handlers=stream_handler, file_handler
 qualname=newstrum
+propagate=0
+
+[logger_notofication]
+level=DEBUG
+handlers=stream_handler, file_handler
+qualname=notofication
+propagate=0
+
+[logger_GPT]
+level=DEBUG
+handlers=stream_handler, file_handler
+qualname=GPT
 propagate=0
 
 [handler_stream_handler]
