mistral ai의 api를 사용하여 분석

--- a/sample.env
+++ b/sample.env
@@ -1,3 +1,6 @@
 discord_webhook=https://discord.com/api/webhooks/your/webhook
 hangout_webhook=https://chat.googleapis.com/v1/spaces/your/webhook
 rss_feeds={"실적발표":"https://api.newswire.co.kr/rss/theme/102","투자":"https://api.newswire.co.kr/rss/theme/110", "분양":"https://api.newswire.co.kr/rss/theme/109", "주식":"https://kr.investing.com/rss/290.rss"}
+mistral_api_uri=https://api.mistral.ai/v1/chat/completions
+mistral_api_key=your_api_key
+mistral_api_model=used_mistral_model
